--- a/Hospital/Hospital.csproj
+++ b/Hospital/Hospital.csproj
@@ -46,14 +46,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AreaPaciente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AreaPaciente.Designer.cs">
+      <DependentUpon>AreaPaciente.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="GestionHospital.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GestionHospital.Designer.cs">
+      <DependentUpon>GestionHospital.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AreaPaciente.resx">
+      <DependentUpon>AreaPaciente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GestionHospital.resx">
+      <DependentUpon>GestionHospital.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
