Formulario Menu donde el usuario puede elegir entre entrar a la zona de areas o a la gestión del hospital .
Mejora de los formularios

--- a/Hospital/Hospital.csproj
+++ b/Hospital/Hospital.csproj
@@ -70,11 +70,17 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="GestionHospital.cs">
+    <Compile Include="Areas.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GestionHospital.Designer.cs">
-      <DependentUpon>GestionHospital.cs</DependentUpon>
+    <Compile Include="Areas.Designer.cs">
+      <DependentUpon>Areas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Menu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menu.Designer.cs">
+      <DependentUpon>Menu.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -90,8 +96,11 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="GestionHospital.resx">
-      <DependentUpon>GestionHospital.cs</DependentUpon>
+    <EmbeddedResource Include="Areas.resx">
+      <DependentUpon>Areas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Menu.resx">
+      <DependentUpon>Menu.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
